--- a/_config.yml
+++ b/_config.yml
@@ -72,8 +72,8 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
-## Themes: hexo-theme-yilia
-theme: hexo-theme-yilia
+## Themes: hexo-theme-icalm
+theme: hexo-theme-icalm
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
